<resources>
    <string name="app_name">TrevalCalc</string>
    <string name="defaul_values_for_digit_Edit">0</string>
    <string name="spiner_direction_default">Выберете направление</string>
    <string name="spiner_tourist_default">Выберете путешественника</string>
    <string name="message_now_name_treval">Назовите путешествие</string>
    <string name="message_select_direction">Выберете направление путешествия</string>

    <!--Button -->
    <string name="button_create">Создать</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_delete">Удалить</string>
    <string name="button_save">Сохранить</string>

    <!--menu -->
    <string name="main_menu_edit_tourist">Редактировать путешественников</string>
    <string name="main_menu_edit_direction">Редактировать направления</string>
    <string name="main_menu_delete_all">Удалить все записи</string>
    <string name="main_menu_exit">Выход</string>

    <!--Text -->
    <string name="text_warnind_befor_delete_all">Внимание! Нажав кнопку Удалить, вы удалите все ранее созданые записи.</string>
    <string name="text_Tourist_Name_Tourist">Имя Туриста</string>
    <string name="text_Tourist_Deposite">Депозит</string>
    <string name="text_Tourist_Credite">Кредит</string>
    <string name="text_Direction_Name_Direction">Имя направления</string>
    <string name="text_Direction_info_Direction">Дополнительная информация</string>
    <string name="text_Direction_coast_ticket">Цена билета</string>
    <string name="text_Direction_cost_live">Стоимость проживания</string>
    <string name="text_Direction_coest_feed">Стоимость Питания</string>
    <string name="text_Direction_coast_fade">Расходы на транспорт</string>
    <string name="text_Treval_Name_Select_Direcion">Выберете направление</string>
    <string name="text_Treval_Name_Select_Tourist">Выберете туриста</string>
    <string name="text_OR">или</string>
    <string name="text_Treval_Name">Название путешествия</string>
    <string name="text_Card_Direction">Направление : </string>
    <string name="text_Card_turist">Количество путешественников :</string>
    <string name="text_Card_total_coast">Итоговая стоимость :</string>
    <string name="text_remember_for_exit">Для выхода еще раз нажмите на кнопку</string>
    <string name="text_menu_go_tu_main">На главную</string>

    <!-- Message -->
    <string name="Message_delete">Невозможно удалить, элемент используеться.</string>

    <!--Name Fragment -->
    <string name="Name_Fragment_Edite_Tourist">Редактирование Туриста</string>
    <string name="Name_Fragment_Add_Tourist">Создание Туриста</string>
    <string name="Name_Fragment_Edite_Direction">Редактирование Направления</string>
    <string name="Name_Fragment_Add_Direction">Создание Направления</string>
    <string name="Name_Fragment_Add_Treval">Создание Путешествия</string>
    <string name="Nmae_Fragment_Edite_Treval">Редактирование Путешествия</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
