<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DeleteAllFragment">
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="5dp">
        <FrameLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/text_warnind_befor_delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDelete"
                android:textSize="30sp"/>

            <Button
                android:background="@drawable/newbutton"
                android:layout_gravity="start|bottom"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_delete_all_fragment_cancel"
                android:text="@string/button_cancel"/>
            <Button
                android:background="@drawable/newbutton"
                android:layout_gravity="end|bottom"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_delete_all_fragment_delete"
                android:text="@string/button_delete"/>

        </FrameLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>